crates/solidity/testing/snapshots/bindings_output/contracts/constructor_modifier/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:7:17]
   │
 7 │     constructor (address _addr) validAddress(_addr) {}
   │                 ───────────────────┬───────────────────  
   │                                    ╰───────────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     modifier validAddress(address _addr) {
   │              ──────┬─────         ──┬──  
   │                    ╰───────────────────── name: 2
   │                                     │    
   │                                     ╰──── name: 3
 3 │         assert(_addr != address(0));
   │         ───┬── ──┬──  
   │            ╰────────── ref: built-in
   │                  │    
   │                  ╰──── ref: 3
 4 │         _;
   │         ┬  
   │         ╰── ref: built-in
   │ 
 7 │     constructor (address _addr) validAddress(_addr) {}
   │     ─────┬─────  
   │          ╰─────── unresolved
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─│ ▶ contract Test {
 2 │ │ ╭─▶     modifier validAddress(address _addr) {
   │ │ │                             ──────┬──────  
   │ │ │                                   ╰──────── definiens: 3
   ┆ ┆ ┆   
 5 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 2
   ┆ ┆     
 8 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
